welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:8: error: ';' expected but 'return' found.
	} return 0
          ^